AWS_S3: upload-delete video, swagger: add upload-delete video
